[package]
name = "tracing-jit-for-fun"
version = "0.1.0"
authors = ["playX <gtashnik11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.66"
cranelift-simplejit = "0.66"
cranelift-module = "0.66"
